<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fundo_cinza"
    android:orientation="vertical"
    tools:context=".HistoricoActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/black"
        app:navigationIcon="@drawable/ic_voltar"
        app:navigationContentDescription="@string/desc_voltar"
        app:title="@string/titulo_historico"
        app:titleTextColor="@color/white"
        app:titleCentered="true" />

    <TextView
        android:id="@+id/txtVazio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:text="@string/nenhuma_avaliacao"
        android:textColor="@color/texto_escuro"
        android:visibility="gone" />

    <TextView
        android:id="@+id/txtDicaExportar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:text="@string/toque_para_exportar"
        android:textColor="@color/cinza_indicador"
        android:textSize="13sp"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listaHistorico"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:padding="16dp" />

</LinearLayout>
