<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialogo"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingTop="28dp"
        android:paddingEnd="24dp"
        android:paddingBottom="8dp">

        <TextView
            android:id="@+id/tvTituloDialogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/bem_vindo_titulo"
            android:textColor="@color/texto_escuro"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvTextoDialogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:lineSpacingExtra="5dp"
            android:text="@string/bem_vindo_texto"
            android:textColor="@color/texto_escuro"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:background="@color/cinza_indicador" />

        <TextView
            android:id="@+id/btnOk"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:gravity="center"
            android:text="@string/btn_ok"
            android:textColor="@color/azul_pedtrauma"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>
</FrameLayout>
